tests/cases_invalid/misc/struct_layout_zero/.expected
error: non-zero `u32` literal out of range
 --> ./cases_invalid/misc/struct_layout_zero/main.shd:1:12
  |
1 | gpu layout(0, 16) struct vec2f {
  |            ^ here
  |
